[package]

name = "dev"
version = "0.0.6"
authors = ["Cody P Schafer <dev@codyps.com>"]
license = "MIT"
repository = "https://github.com/jmesmon/rust-dev"
description = "An interface to system/kernel devices"

[dependencies]
log = "*"
rustc-serialize = "*"
err = "*"
nix = "*"
libc = "*"

[dev-dependencies]
env_logger = "*"
